--- a/.github/workflows/cron-job.yml
+++ b/.github/workflows/cron-job.yml
@@ -2,13 +2,13 @@ name: Cron Job
 
 on:
   schedule:
-    - cron: '0 */3 * * *'
+    - cron: "0 */3 * * *"
 
 jobs:
   run-cron-job:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Acionar função cron no Flask
-      run: |
-        curl -X POST "https://nicolas-starkbank-challenge.vercel.app/cron?token=${{ secrets.CRON_TOKEN }}"
+      - name: Activate cron route on Vercel
+        run: |
+          curl -X POST "https://nicolas-starkbank-challenge.vercel.app/cron?token=${{ secrets.CRON_TOKEN }}"
